app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: image-uploader
  namespace: image-upload
  labels:
    app: image-uploader
    app.kubernetes.io/component: image-uploader
    app.kubernetes.io/instance: image-uploader
    app.kubernetes.io/name: image-uploader
    app.kubernetes.io/part-of: image-uploader-app
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
spec:
  host: image-uploader.apps.cr-ocp-coll.dt.tesoro.it
  to:
    kind: Service
    name: image-uploader
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
